--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="icon"> 
         <a href="https://github.com/Robert-Kwiatkowski/">
-          <i class="fa fa-codepen"></i>
+          <i class="fa fa-github"></i>
         </a>
       </div>
     </div>
