--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img class="myface" src="images/profile4.png">
       <img class="up-arrow" src="images/up-arrow.png">
       <span class="header">Who's this guy?</span>
-      <span class="detail light">I'm sure you don't want to hear my life story, so I'll be quick.I'm aspiring web applications backend developer, currently working as a DevOps engineer at Intel in Gdansk. I'm studying Physics with specialization "Applied Informatics" in Gdansk University of Technology. I have a serious passion for WebApps and widely understood cybersecurity. If you're interested in <a href="mailto:robert.kwiatkowskisop@gmail.com">contacting</a> me, don't hesitate!</span>
+      <span class="detail light">I'm sure you don't want to hear my life story, so I'll be quick.I'm aspiring web applications backend developer, currently working as a Python Developer at Vee in Gdansk. I'm Bachelor of Science in Physics, currently studying Computer Science (part-time studies) . I have a serious passion for WebApps and widely understood cybersecurity. If you're interested in <a href="mailto:robert.kwiatkowskisop@gmail.com">contacting</a> me, don't hesitate!</span>
     </div>
   </section>
 
